...

    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }

    private func setupView() {
        accessibilityIdentifier = "AvatarView"
        clipsToBounds = true

        imageView.isHidden = true
        imageView.contentMode = .scaleAspectFill
        imageView.accessibilityIdentifier = "AvatarImageView"
        imageView.translatesAutoresizingMaskIntoConstraints = false
        addSubview(imageView)

        lettersContainerView.translatesAutoresizingMaskIntoConstraints = false
        addSubview(lettersContainerView)

...
