...
        fatalError("init(coder:) has not been implemented")
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        title = "Channels"
        view.backgroundColor = .white

        setupBarButtonView()
        setupTableView()
    }
    
...
        avatarView.translatesAutoresizingMaskIntoConstraints = false
        NSLayoutConstraint.activate([
            avatarView.widthAnchor.constraint(equalToConstant: 40),
            avatarView.heightAnchor.constraint(equalToConstant: 40)
        ])
        let rightBarButtonItem = UIBarButtonItem(customView: avatarView)
        rightBarButtonItem.accessibilityLabel = "avatarViewBarButtonItem"
        let leftBarButtonItem = UIBarButtonItem(image: UIImage(systemName: "gear"),
                                                style: .plain,
                                                target: self,
                                                action: #selector(openSettings))
        
        let addBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(showNewChannelAlert))
...
